[package]
name = "esperto-wiimote"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", default-features = false }
esperto = { version = "0.6.0", features = ["serde"] }
#tokio-macros = "2.7.0"
tokio = { version = "1.51.0", features = ["macros", "rt"] }
#evdev = { version = "0.13.2", features = ["tokio"] }
evdevil = { version = "0.4.0", features = ["tokio", "serde"] }
#tokio-stream = "0.1.18"
tokio-udev = "0.10.0"
udev = "0.9.3"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
frozen-collections = "0.9.1"
const_format = "0.2.35"
ordered-float = "5.3.0"

[features]
tuning = []
ir-debug = []
acc-debug = []