[package]
name = "esperto-wiimote"
version = "0.1.0"
edition = "2024"

[lib]
name = "proc_macros"
path = "src/proc_macros/lib.rs"
proc-macro = true

[dependencies]
crossterm = { version = "0.29.0", default-features = false, optional = true }
esperto = { version = "0.6.1", features = ["serde"] }
tokio = { version = "1.51.0", features = ["macros", "rt"] }
evdevil = { version = "0.4.0", features = ["tokio", "serde"] }
tokio-udev = "0.10.0"
udev = "0.9.3"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
const_format = "0.2.35"
ordered-float = "5.3.0"
syn = { version = "2.0", default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = "1.0.106"
frozen-collections = "0.9.1"
clap = { version = "4.6.1", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"

[features]
tuning = ["dep:crossterm"]
ir-debug = []
acc-debug = []