[package]
name = "esperto-wiimote"
version = "0.1.2"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Advanced Wiimote remapping software"
homepage = "https://github.com/KayJay7/esperto-wiimote"
repository = "https://github.com/KayJay7/esperto-wiimote.git"

[lib]
name = "proc_macros"
path = "src/proc_macros/lib.rs"
proc-macro = true

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events", "event-stream"] }
esperto = { version = "0.7.0", features = ["serde", "macros"] }
tokio = { version = "1.51.0", features = ["macros", "rt", "signal"] }
evdevil = { version = "0.4.1", features = ["tokio", "serde"] }
tokio-udev = "0.10.0"
udev = "0.9.3"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
const_format = "0.2.35"
ordered-float = "5.3.0"
syn = { version = "2.0", default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = "1.0.106"
frozen-collections = { version = "0.9.1", default-features = false, features = ["std"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_yaml = "0.9.34"
nalgebra = "0.34.2"

[features]
tuning = []
ir-debug = []
acc-debug = []
